Fri Dec 13 17:04:54 1996  Per Bothner  <bothner@deneb.cygnus.com>

	New directory - for test suites for Kawa.