@@ -11,7 +11,7 @@
 	    2))
       (* 11/2 (expt y 8))
       (/ x (* 2 y))))
-(test -54767/66192 dicky-test 77617 33096)
+(test -54767/66192 dickey-test 77617 33096)
 
 (test 0 + 17280012451545786657095548928 -17280012451545786657095548928)
 (test 1250120440709706990357803482218496
